fix: tag for company
